Add Armadillo & Wolf variants to Lazarus GUI